# RoadSigns

./: CMakeLists.txt  classifier.h  filters.cpp  filters.h  io.h  io.hpp  main.cpp  matrix.h  matrix.hpp  model.txt  readme.txt  test.cpp
EasyBMP/: EasyBMP.cpp  EasyBMP_BMP.h
argvparser/: argvparser.h
cmake/: EasyBMP.cmake  argvparser.cmake  liblinear.cmake  main.cmake  test.cmake
